[gd_scene load_steps=12 format=2]

[ext_resource path="res://MiMo/Info/Info.gd" type="Script" id=1]
[ext_resource path="res://MiMo/Common/Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://MiMo/Info/Assets/time_display.png" type="Texture" id=3]
[ext_resource path="res://MiMo/Common/LCD_Segment/LCD_Segment_Large.tscn" type="PackedScene" id=4]
[ext_resource path="res://MiMo/Common/LCD_Segment/LCD_Segment_Medium.tscn" type="PackedScene" id=5]
[ext_resource path="res://MiMo/Common/Monitor/Monitor.tscn" type="PackedScene" id=6]
[ext_resource path="res://MiMo/Info/Assets/info_monitor.png" type="Texture" id=7]
[ext_resource path="res://MiMo/Info/Assets/info_monitor_display.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://MiMo/Info/Assets/good_morning@2x.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Info" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 448.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 224.002 ]
}

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="time_display" type="Sprite" parent="." index="1"]

position = Vector2( 234, 100 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="time_0" parent="time_display" index="0" instance=ExtResource( 4 )]

position = Vector2( -107, -62 )
letter = "0"

[node name="time_1" parent="time_display" index="1" instance=ExtResource( 4 )]

position = Vector2( -48, -62 )
letter = "0"

[node name="time_2" parent="time_display" index="2" instance=ExtResource( 4 )]

position = Vector2( 12, -62 )
letter = ":"

[node name="time_3" parent="time_display" index="3" instance=ExtResource( 4 )]

position = Vector2( 72, -62 )
letter = "0"

[node name="time_4" parent="time_display" index="4" instance=ExtResource( 4 )]

position = Vector2( 132, -62 )
letter = "0"

[node name="date_0" parent="time_display" index="5" instance=ExtResource( 5 )]

position = Vector2( -108, 19 )
letter = "j"

[node name="date_1" parent="time_display" index="6" instance=ExtResource( 5 )]

position = Vector2( -75, 19 )
letter = "a"

[node name="date_2" parent="time_display" index="7" instance=ExtResource( 5 )]

position = Vector2( -42, 19 )
letter = "n"

[node name="date_3" parent="time_display" index="8" instance=ExtResource( 5 )]

position = Vector2( -9, 19 )

[node name="date_4" parent="time_display" index="9" instance=ExtResource( 5 )]

position = Vector2( 24, 19 )
letter = "0"

[node name="date_5" parent="time_display" index="10" instance=ExtResource( 5 )]

position = Vector2( 57, 19 )
letter = "1"

[node name="date_6" parent="time_display" index="11" instance=ExtResource( 5 )]

position = Vector2( 90, 19 )
letter = "/"

[node name="date_7" parent="time_display" index="12" instance=ExtResource( 5 )]

position = Vector2( 123, 19 )
letter = "8"

[node name="date_8" parent="time_display" index="13" instance=ExtResource( 5 )]

position = Vector2( 156, 19 )
letter = "1"

[node name="Monitor" parent="." index="2" instance=ExtResource( 6 )]

margin_top = 167.0
margin_right = 448.0
margin_bottom = 607.0
monitor_texture = ExtResource( 7 )
monitor_display = ExtResource( 8 )

[node name="Label" type="Label" parent="Monitor" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 102.0
margin_top = 124.0
margin_right = 349.0
margin_bottom = 153.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.777029, 0.498428, 0.917969, 1 )
text = "Good morning!"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="good_morning2x" type="Sprite" parent="." index="3"]

light_mask = 0
position = Vector2( 222.738, 426.247 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Material", "Visibility" ]


